--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<string>$(PRODUCT_NAME) uses photos to upload the image profile.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>$(PRODUCT_NAME) uses the camera to create an image for the profile.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>$(PRODUCT_NAME) could need access to the mic.</string>
 </dict>
 </plist>
