--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,21 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  # Future-based library for making HTTP requests
+  http: ^0.12.0+2
+
+  # Service Locator (abstraction advantage)
+  get_it: ^3.0.3
+
+  # Provider as a design pattern
+  provider: ^3.1.0+1
+
+  # Secure storage through Keychain(iOS) and KeyStore (Android)
+  flutter_secure_storage: ^3.3.1+1
+
+  # Pick images from both image library and camera
+  image_picker: ^0.6.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -41,7 +56,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  #assets:
+  #  - assets/images/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
