--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   # Pick images from both image library and camera
   image_picker: ^0.6.2
 
+  image_cropper: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
