--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
 
   # Pick images from both image library and camera
   image_picker: ^0.6.2
-
   image_cropper: ^1.1.0
+  url_launcher: ^5.2.7
 
 dev_dependencies:
   flutter_test:
