--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   image_picker: ^0.6.2
   image_cropper: ^1.1.0
   url_launcher: ^5.2.7
+  geolocator: ^5.1.5
+
 
 dev_dependencies:
   flutter_test:
