--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  fonts: 
+    - family: CustomIcons
+      fonts: 
+        - asset: assets/fonts/AppIcons.ttf
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
