--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_cropper: ^1.1.0
   url_launcher: ^5.2.7
   geolocator: ^5.1.5
+  google_maps_flutter: ^0.5.5
 
   flutter_pagewise: ^1.2.3
 dev_dependencies:
