--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   url_launcher: ^5.2.7
   geolocator: ^5.1.5
   google_maps_flutter: ^0.5.5
+  flutter_open_whatsapp: ^0.1.2
+  flutter_email_sender: ^2.2.2
+
 
   flutter_pagewise: ^1.2.3
 dev_dependencies:
